--- a/HW1/2021_homework1_analytical.tex
+++ b/HW1/2021_homework1_analytical.tex
@@ -297,9 +297,10 @@ $$P(\epsilon_i) =  \frac{1}{2}\exp{\Big(-|\epsilon_i|\Big)}$$
 Compute the conditional log-likelihood of $\textbf{y}$ given $\textbf{x}$ and $\omega$.
 Give the simplest function of $y_i$ and $\omega$ such that minimizing this function is equivalent to maximizing the conditional log-likelihood \\
 \begin{answertext}{9cm}{}
+\begin{align}
 
 
-  
+
 \end{answertext} 
 
 \item Which loss is easier to minimize?  Which loss is more robust to outliers?  Explain in detail.\\
