--- a/HW1/2021_homework1_analytical.tex
+++ b/HW1/2021_homework1_analytical.tex
@@ -296,9 +296,19 @@ $$\sum_{i=1}^n  (y_i-\omega^Tx_i)^2$$\\
 $$P(\epsilon_i) =  \frac{1}{2}\exp{\Big(-|\epsilon_i|\Big)}$$
 Compute the conditional log-likelihood of $\textbf{y}$ given $\textbf{x}$ and $\omega$.
 Give the simplest function of $y_i$ and $\omega$ such that minimizing this function is equivalent to maximizing the conditional log-likelihood \\
-\begin{answertext}{9cm}{}
+\begin{answertext}{11cm}{}
 
-
+\begin{align}
+L_{[D]}(\omega) &= \prod_{i=1}^{n} p(\omega^Tx_i + \epsilon_i \mid x_i; \vec{\omega})  \notag\\
+&= \prod_{i=1}^{n} p(\epsilon_i \mid x_i; \vec{\omega})  \notag\\
+&= \prod_{i=1}^{n} \frac{1}{2}\exp{\Big{(}-\left|\epsilon_{i}\right|\Big{)}} \notag\\
+&= \prod_{i=1}^{n} \frac{1}{2}\exp{\Big{(}-\left|y_{i}-\omega^{T}x_{i}\right|\Big{)}} \notag
+\end{align}
+\begin{align}
+&logL_{[D]}(\omega) = \sum_{i=1}^{n} log \frac{1}{2} + \sum_{i=1}^{n} (-\left|y_{i}-\omega^{T}x_{i}\right|) \notag
+\end{align}
+Maximizing $logL_{[D]}(\omega)$ is equivalent to minimizing: \\
+$$\sum_{i=1}^{n} (\left|y_{i}-\omega^{T}x_{i}\right|) $$ \\
 
 \end{answertext} 
 
