--- a/HW1/2021_homework1_analytical.tex
+++ b/HW1/2021_homework1_analytical.tex
@@ -396,7 +396,7 @@ They reduce Bayesian updating to modifying the parameters of the prior distribut
 What's the size of the joint probability table?\\
 \begin{answertext}{3cm}{}
 
-The size of joint probability table is $2^{k}$.
+The size of joint probability table is $2^{k}-1$.
 
 \end{answertext}
 
@@ -420,25 +420,28 @@ Thus, a total of $4(k-2)+4=4k-4$ parameters should be specified.
 \end{answertext}
 
 \item Assume conditional independences as in the previous question.  Use the chain rule of probability and the graphoid axioms to write down the likelihood for the model such that only a polynomial number of parameters (in $k$) are used.\\
-\begin{answertext}{10cm}{}
+\begin{answertext}{13cm}{}
 
-From $(X_{1} {\perp\!\!\!\perp} X_{3}, \ldots, X_{k} \mid X_{2})$ we have $(X_{1} {\perp\!\!\!\perp} X_{4}, X_{5}, \ldots, X_{k} \mid X_{2}, X_{3})$ \\
-And we know $(X_{2} {\perp\!\!\!\perp} X_{4}, X_{5}, \ldots, X_{k} \mid X_{1}, X_{3})$ \\
-Combining the two relations, we have $(X_{1}, X_{2} {\perp\!\!\!\perp} X_{4}, X_{5}, \ldots, X_{k} \mid X_{3})$ \\
-From there, we know $(X_{1}, X_{2} {\perp\!\!\!\perp} X_{5}, \ldots, X_{k} \mid X_{3}, X_{4})$ \\
-Combing with the assumption that $(X_{3} {\perp\!\!\!\perp} X_{1}, X_{5}, X_6, \ldots, X_{k} \mid X_{2}, X_{4})$ \\
-We have $(X_{1}, X_{2}, X_{3} {\perp\!\!\!\perp} X_{5}, \ldots, X_{k} \mid X_{4})$ \\
+From $(X_{1} {\perp\!\!\!\perp} X_{3}, \ldots, X_{k} \mid X_{2})$ we have $(X_{1} {\perp\!\!\!\perp} X_{4}, X_{5}, \ldots, X_{k} \mid X_{2}, X_{3})$ (Chain rule)\\
+And we know $(X_{2} {\perp\!\!\!\perp} X_{4}, X_{5}, \ldots, X_{k} \mid X_{1}, X_{3})$ (from (b))\\
+Combining the two relations, we have $(X_{1}, X_{2} {\perp\!\!\!\perp} X_{4}, X_{5}, \ldots, X_{k} \mid X_{3})$ (Intersection axiom)\\
+From there, we know $(X_{1}, X_{2} {\perp\!\!\!\perp} X_{5}, \ldots, X_{k} \mid X_{3}, X_{4})$ (Chain rule)\\
+Combing with the assumption that $(X_{3} {\perp\!\!\!\perp} X_{1}, X_{5}, X_6, \ldots, X_{k} \mid X_{2}, X_{4})$ (from (b))\\
+We have $(X_{1}, X_{2}, X_{3} {\perp\!\!\!\perp} X_{5}, \ldots, X_{k} \mid X_{4})$ (Intersection axiom)\\
 And so on, we can finally have $(X_{1}, X_{2}, \ldots, X_{k-2} {\perp\!\!\!\perp} X_{k} \mid X_{k-1})$ \\
+using the conditional independences above:
 \\
 \begin{align}
-p(X_{1}, X{2}, \ldots, X{k}) &= p(X_{1}, X_{3}, X_{4}, \dots, X_{k} \mid X_{2}) \notag\\
+p(X_{1}, X_{2}, \ldots, X_{k}) &= p(X_{1}, X_{3}, X_{4}, \dots, X_{k} \mid X_{2}) p(X_{2})\notag\\
 &= p(X_{1} \mid X_{2}) p(X_{3}, X_{4}, \ldots, X_{k} \mid X_{2}) p(X_{2}) \notag\\
 &= p(X_{1} \mid X_{2}) p(X_{2}, X_{3}, \ldots, X_{k}) \notag\\
 &= p(X_{1} \mid X_{2}) p(X_{2} \mid X_{3}) p(X_{4}, \ldots, X_{k}) p(X_3) \notag\\
 &\ldots \notag\\
-&= p(X_{1} \mid X_{2}) p(X_{2} \mid X_{3}) \ldots p(X_{k-1} \mid X_{k}) p(X_{k}) \notag
+&= p(X_{1} \mid X_{2}) p(X_{2} \mid X_{3}) \ldots p(X_{k-1} \mid X_{k}) p(X_{k}) \notag\\
+L_{[D]} = \prod_{i=1}^{n} p(x_{i1}, x_{i2}, \ldots, x_{ik}) &= \prod_{i=1}^{n} p(x_{i1} \mid x_{i2}) p(x_{i2} \mid X_{i3}) \ldots p(x_{i(k-1)} \mid x_{ik}) p(x_{k}) \notag\\
+\notag
 \end{align}
-As such, it only need a polynomial number of parameters ($2k$) to compute. \\
+As each $p(X_{i} \mid X_{i+1})$ needs 2 parameters,and we have $k-1$ of them plus a $p(X_{k})$ which is only 1 parameter, the likelihood only need a polynomial number of parameters ($2k-1$) to compute. \\
 
 \end{answertext} 
 \end{enumerate}
