--- a/HW2/2021_homework2_analytical_template.tex
+++ b/HW2/2021_homework2_analytical_template.tex
@@ -295,9 +295,9 @@ Assuming that $(\vec{X}^T\vec{X}+\lambda \vec{I})$ ($\vec{I}$ is the identity ma
 \begin{answertext}{10cm}{}
 
 \begin{align}
-\frac{dJ(\vec{\beta})}{d\vec{\beta}} &= \frac{d}{d\vec{\beta}} (\vec{y} - \vec{X}\vec{\beta})^{T} (\vec{y} - \vec{X}\vec{\beta}) + \lambda \sum_{i}{\beta_{i}^{2}} \notag\\
-&= \frac{d}{d\vec{\beta}} (\vec{y}^{T} - \vec{\beta}^{T}\vec{X}^{T}) (\vec{y} - \vec{X}\vec{\beta}) + \lambda \sum_{i}{\beta_{i}^{2}} \notag\\
-&= \frac{d}{d\vec{\beta}} \vec{y}^{T}\vec{y} - 2\vec{y}^{T}\vec{X}\vec{\beta} + \vec{\beta}^{T}\vec{X}^{T}\vec{X}\vec{\beta} + \lambda\vec{\beta}^{T}\vec{\beta} \notag\\
+\frac{dJ(\vec{\beta})}{d\vec{\beta}} &= (\frac{d}{d\vec{\beta}}) (\vec{y} - \vec{X}\vec{\beta})^{T} (\vec{y} - \vec{X}\vec{\beta}) + \lambda \sum_{i}{\beta_{i}^{2}} \notag\\
+&= (\frac{d}{d\vec{\beta}}) (\vec{y}^{T} - \vec{\beta}^{T}\vec{X}^{T}) (\vec{y} - \vec{X}\vec{\beta}) + \lambda \sum_{i}{\beta_{i}^{2}} \notag\\
+&= (\frac{d}{d\vec{\beta}}) \vec{y}^{T}\vec{y} - 2\vec{y}^{T}\vec{X}\vec{\beta} + \vec{\beta}^{T}\vec{X}^{T}\vec{X}\vec{\beta} + \lambda\vec{\beta}^{T}\vec{\beta} \notag\\
 &= -2\vec{X}^{T}\vec{y} + 2\vec{X}^{T}\vec{X}\vec{\beta} + 2\lambda\vec{\beta} \notag
 \end{align}
 Let $\frac{dJ(\vec{\beta})}{d\vec{\beta}} = 0$ 
@@ -314,35 +314,53 @@ Let $\frac{dJ(\vec{\beta})}{d\vec{\beta}} = 0$
 
 \item Show that the ridge regression minimizer in the previous question is the mode of the posterior distribution, under a Gaussian prior on $\vec{\beta}$ given by ${\cal N}(0, \tau \cdot \vec{I})$, and Gaussian likelihood $Y = {\cal N}(\vec{X} \cdot \vec{\beta}, \sigma^2 \vec{I})$.  The mode $\vec{\beta}^*$ of the posterior are the settings of parameters that maximize the posterior distribution (e.g. the maximum a posteriori (MAP) parameter estimates).
 
-\begin{answertext}{16cm}{}
+\begin{answertext}{20.7cm}{}
 \begin{align}
 p_{posterior}{(\vec{\beta})} &= \frac{{\cal L}_{[D]}(\vec{\beta}) \cdot p_{prior}(\vec{\beta})}{\int_{\vec{\beta}} {\cal L}_{[D]}(\vec{\beta}) \cdot p_{prior}(\vec{\beta}) } \notag \\ 
 &=\frac{
-\frac{1}{\sigma I \sqrt{2 \pi}^k } e^{-\frac{(y - X \cdot \vec{\beta})^{T}(\sigma^2I)^{-1}(y - X \cdot \vec{\beta})}{2}} \cdot
-\frac{1}{\tau I \sqrt{2 \pi}} e^{-\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
+\frac{1}{\sigma \vec I \sqrt{2 \pi}^k } e^{-\frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2}} \cdot
+\frac{1}{\tau \vec I \sqrt{2 \pi}^k} e^{-\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
 }{\int_{\vec{\beta}}
-\frac{1}{\sigma I \sqrt{2 \pi}^k } e^{-\frac{(y - X \cdot \vec{\beta})^{T}(\sigma^2I)^{-1}(y - X \cdot \vec{\beta})}{2}} \cdot
-\frac{1}{\tau I \sqrt{2 \pi}} e^{-\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
+\frac{1}{\sigma \vec I \sqrt{2 \pi}^k } e^{-\frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2}} \cdot
+\frac{1}{\tau \vec I \sqrt{2 \pi}^k} e^{-\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
 } \notag \\ 
 &=\frac{
-\frac{1}{\sigma I \sqrt{2 \pi}^k } e^{-\frac{(y - X \cdot \vec{\beta})^{T}(\sigma^2I)^{-1}(y - X \cdot \vec{\beta})}{2}} \cdot e^{-\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
+e^{-\frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2}} \cdot e^{-\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
 }{\int_{\vec{\beta}}
-\frac{1}{\sigma I \sqrt{2 \pi}^k } e^{-\frac{(y - X \cdot \vec{\beta})^{T}(\sigma^2I)^{-1}(y - X \cdot \vec{\beta})}{2}} \cdot e^{-\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
+e^{-\frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2}} \cdot e^{-\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
 } \notag \\
 &=\frac{
-\frac{1}{\sigma I \sqrt{2 \pi}^k } e^{-\frac{(y - X \cdot \vec{\beta})^{T}(\sigma^2I)^{-1}(y - X \cdot \vec{\beta})}{2} -\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
+e^{-\frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2} -\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
 }{\int_{\vec{\beta}}
-\frac{1}{\sigma I \sqrt{2 \pi}^k } e^{-\frac{(y - X \cdot \vec{\beta})^{T}(\sigma^2I)^{-1}(y - X \cdot \vec{\beta})}{2} -\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
+e^{-\frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2} -\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
 } \notag
 \end{align}
 We know the denominator of the above function is just a normalization constant, and exp(.) is a monotonic, concave function. So maximizing the above function is equivalent to maximizing:
-$$-\frac{(y - X \cdot \vec{\beta})^{T}(\sigma^2I)^{-1}(y - X \cdot \vec{\beta})}{2} -\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}$$
+$$-\frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2} -\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}$$
 And maximizing the above equation is equivalent to minimizing:
-$$\frac{(y - X \cdot \vec{\beta})^{T}(\sigma^2I)^{-1}(y - X \cdot \vec{\beta})}{2} +\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}$$
-take the derivative respect to $\beta$:
+$$\frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2} +\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}$$
+take the derivative with respect to $\beta$:
+\begin{align}
+&(\frac{d}{d\vec{\beta}}) \frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2} +\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2} \notag\\ 
+=& (\frac{d}{d\vec{\beta}})  \frac{1}{2\sigma^2}(\vec{y}^{T} - \vec{\beta}^{T}\vec{X}^{T}) (\vec{y} - \vec{X}\vec{\beta}) + \frac{1}{2\tau^2}\vec{\beta}^{T}\vec{\beta} \notag\\ 
+=& (\frac{d}{d\vec{\beta}}) \frac{1}{2\sigma^2}(\vec{y}^{T}\vec{y} - 2\vec{y}^{T}\vec{X}\vec{\beta} + \vec{\beta}^{T}\vec{X}^{T}\vec{X}\vec{\beta}) + \frac{1}{2\tau^2}\vec{\beta}^{T}\vec{\beta} \notag\\
+=& - \frac{1}{\sigma^2}\vec{X}^{T}\vec{y} + (\frac{1}{\sigma^2}\vec{X}^{T}\vec{X} + \frac{1}{\tau^2}\vec I)\vec{\beta} \notag
+\end{align}
+To find the mode $\beta^{*}$ we set it to zero:
+\begin{align}
+- \frac{1}{\sigma^2}\vec{X}^{T}\vec{y} + (\frac{1}{\sigma^2}\vec{X}^{T}\vec{X} + \frac{1}{\tau^2}\vec I)\vec{\beta^{*}} &= 0 \notag\\
+(\frac{1}{\sigma^2}\vec{X}^{T}\vec{X} + \frac{1}{\tau^2}\vec I)\vec{\beta^{*}} &= \frac{1}{\sigma^2}\vec{X}^{T}\vec{y}  \notag
+\end{align}
+\end{answertext} 
+\begin{answertext}{4cm}{}
+so we have: 
+\begin{align}
+(\vec{X}^{T}\vec{X} + \frac{\sigma^2}{\tau^2}\vec I)\vec{\beta^{*}} &= \vec{X}^{T}\vec{y} \notag\\
+\vec{\beta^{*}} &= (\vec{X}^{T}\vec{X} + \frac{\sigma^2}{\tau^2}\vec I)^{-1} \vec{X}^{T}\vec{y}\notag
+\end{align}
+We can see the mode of the posterior distribution is the same as ridge regression minimizer
 
 \end{answertext} 
-
 \item Find the relationship between the regularization parameter $\lambda$ in the ridge formula, and the variance parameters $\tau$ and $\sigma^2$.
 
 Show your work!
@@ -364,8 +382,18 @@ $.
 \end{itemize}
 
 \begin{answertext}{10cm}{}
-
-
+We know from question 1 ridge regression that:
+$$\vec{\beta} = (\vec{X}^{T}\vec{X} + \lambda\vec{I})^{-1} \vec{X}^{T}\vec{y}$$
+We know from question 2 MAP that:
+$$p_{posterior}{(\vec{\beta})} = \frac{
+e^{-\frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2} -\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
+}{\int_{\vec{\beta}}
+e^{-\frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2} -\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}}  
+} $$
+$$ MAP(\beta^{*}):(\frac{d}{d\vec{\beta}}) \frac{(\vec y - \vec X \cdot \vec{\beta})^{T}(\sigma^2\vec I)^{-1}(\vec y - \vec X \cdot \vec{\beta})}{2} +\frac{||\vec{\beta}||^{2}_{2}}{2 {(\tau)}^2}=0$$
+$$\vec{\beta^{*}} = (\vec{X}^{T}\vec{X} + \frac{\sigma^2}{\tau^2}\vec I)^{-1} \vec{X}^{T}\vec{y}$$
+As they are equal, we have:
+$$\lambda = \frac{\sigma^2}{\tau^2}$$
   
 \end{answertext} 
 
